--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@next/font": "13.1.2",
     "@prisma/client": "4.9.0",
+    "@sanity/icons": "^2.2.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.2.4",
+    "@sanity/ui": "^1.0.14",
     "@sanity/webhook": "^2.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
@@ -30,6 +33,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
     "rehype-autolink-headings": "^6.1.1",
     "sanity": "^3.2.4",
     "sanity-plugin-markdown": "^4.0.0",
