--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "gen-env": "gen-env-types .env -o src/env.d.ts -e .",
     "lint": "next lint",
-    "sanity": "sanity dev"
+    "sanity": "sanity dev",
+    "ts": "tsc --noEmit --incremental",
+    "ts:watch": "yarn ts --watch"
   },
   "dependencies": {
     "@next/font": "13.1.2",
@@ -44,6 +46,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.3",
     "gen-env-types": "^1.3.4",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
